--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,14 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+teloxide = { version = "0.13.0", features = ["macros"] }
+tokio = { version = "1.40.0", features = ["full", "rt-multi-thread", "macros"] }
+image = "0.25.2"
+qrcode = "0.14.1"
+pretty_env_logger = "0.5.0"
+log = "0.4"
+reqwest = { version = "0.12.7", features = ["json"] }
+serde = "1.0.210"
+serde_json = "1.0.128"
+dotenv = "0.15.0"
+
